Fixed spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -438,13 +438,15 @@ ion-icon {
     justify-content: center;
     gap: 3.2rem;
 }
-
+.pricing-card-header{
+    margin-bottom:4.8rem ;
+}
 .pricing-card {
     border: 2px solid #fdf2e9;
     border-radius: 8px;
     position: relative;
     overflow: hidden;
-    padding: 3.2rem 2.4rem;
+    padding: 4.8rem;
 }
 
 .pricing-card:last-child {
@@ -520,6 +522,8 @@ ion-icon {
 .pricing-footer {
     display: flex;
     justify-content: center;
+    font-size: 1.6rem;
+    padding-top: 4.8rem;
 }
 
 /* ****** Pricing End ****** */
